<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>trinity.pluginFramework.client</groupId>
    <artifactId>trinityCucmberClient</artifactId>
    <version>v1.0</version>

    <parent>
        <groupId>trinity.pluginframework.parentpom</groupId>
        <artifactId>trinityparentPom</artifactId>
        <version>v1.00</version>
    </parent>

    <properties>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <maven-surefire-plugin.version>3.0.0</maven-surefire-plugin.version>
        <maven-dependency-plugin.version>3.5.0</maven-dependency-plugin.version>
    </properties>

    <dependencies>

        <dependency>
            <groupId>trinity.pluginframework.utilityplugin</groupId>
            <artifactId>trinityutilityplugin</artifactId>
            <version>v1.0</version>
        </dependency>
        <dependency>
            <groupId>trinity.pluginFramework.webplugin</groupId>
            <artifactId>trinitywebplugin</artifactId>
            <version>v1.0</version>
        </dependency>
        <dependency>
            <groupId>trinity.pluginframework.mobileplugin</groupId>
            <artifactId>trinitymobileplugin</artifactId>
            <version>v1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <suiteXmlFiles>
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>browserstack</id>
            <build>
                <plugins>
                    <plugin>
                        <artifactId>maven-dependency-plugin</artifactId>
                        <version>${maven-dependency-plugin.version}</version>
                        <executions>
                            <execution>
                                <id>getClasspathFilenames</id>
                                <goals>
                                    <goal>properties</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <configuration>
                            <argLine>-javaagent:${com.browserstack:browserstack-java-sdk:jar} --add-opens
                                java.base/java.lang=ALL-UNNAMED
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <repositories>
<!--        <repository>-->
<!--            <id>CoreDependencies</id>-->
<!--            <url></url>-->
<!--        </repository>-->
    </repositories>
    <distributionManagement>
<!--        <repository>-->
<!--            <id>CoreDependencies</id>-->
<!--            <url></url>-->
<!--        </repository>-->
<!--        <snapshotRepository>-->
<!--            <id>CoreDependencies</id>-->
<!--            <url></url>-->
<!--        </snapshotRepository>-->
    </distributionManagement>

</project>

